@@ -1,3 +1,9 @@
+# FROM eclipse-temurin:17-jdk-alpine
+# # VOLUME /tmp
+# COPY target/Music-Web-0.0.1-SNAPSHOT.jar app.jar
+# # COPY cred.json /app/cred.json
+# ENTRYPOINT ["java", "-jar", "/app.jar"]
+
 # Sử dụng Maven để build ứng dụng
 FROM maven:3.8.4-openjdk-17-slim AS builder
 
@@ -11,13 +17,10 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 # Sử dụng một image JDK để chạy ứng dụng
-# FROM eclipse-temurin:17-jdk-alpine
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:17-jdk-alpine
 
 # Copy file .jar đã build từ bước trước vào image
 COPY --from=builder /app/target/Music-Web-0.0.1-SNAPSHOT.jar /app.jar
 
 # Lệnh chạy ứng dụng
-# ENTRYPOINT ["java", "-jar", "/app.jar"]
-ENTRYPOINT ["java", "--add-opens", "java.base/java.io=ALL-UNNAMED", "-jar", "/app.jar"]
-
+ENTRYPOINT ["java", "-jar", "/app.jar"]
